<resources>
    <string name="app_name">MoviesLand</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_catalog">Catalog</string>

    <string name="title_movies">Movies</string>
    <string name="title_tvs">TVs</string>
    <string name="title_persons">Persons</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_catalog">Catalog</string>
    <string name="title_search">Search</string>
    <string name="title_detail">Detail</string>
    <string name="title_review">Review</string>

    <string name="label_persons">Actors</string>
    <string name="label_similar">Similar</string>
    <string name="label_cast">Cast</string>
    <string name="label_crew">Crew</string>

    <string name="tab_popular">Popular</string>
    <string name="tab_top_rated">Top rated</string>
    <string name="tab_upcoming">Upcoming</string>
    <string name="tab_now_playing">Now Playing</string>
    <string name="tab_on_the_air">On the air</string>
    <string name="tab_airing_today">Airing today</string>

    <string name="spinner_year_default">All years</string>
    <string name="spinner_genres_default">All genres</string>

    <string name="error_getting_content">Error loading data</string>

    <string name="to_favorite">To Favorite</string>
    <string name="from_favorite">From Favorite</string>
    <string name="to_watchlist">To Watchlist</string>
    <string name="from_watchlist">From Watchlist</string>

    <string name="known_for">Known for: %s</string>

    <string name="empty_text">No results</string>

    <string name="provide_api_key">Provide MoviesDB API KEY in MoviesService class</string>
    <string name="ok">OK</string>

    <string name="content_desc_trailer">Trailer</string>
    <string name="content_desc_share">Share</string>
    <string name="content_desc_previous">Previous</string>
    <string name="content_desc_next">Next</string>

</resources>
